--- a/css/default_style.css
+++ b/css/default_style.css
@@ -50,9 +50,6 @@ body{
     padding: 4px 0px;
 
 }
-.input:focus {
-    outline: none;
-}
 
 .radio-button{
     width: 12px;
@@ -101,6 +98,22 @@ body{
     position: absolute;
     left: 5px;
     top: 2px;
+}
+
+.textarea {
+    resize: none;
+    color:black;
+    background-color: #ffffff;
+    font-family: sans-serif;
+    font-size: 12px;
+    border-bottom: 1px solid white;
+    border-right: 1px solid white;
+    border-top: 1px solid gray;
+    border-left: 1px solid gray;
+}
+
+.input:focus, .textarea:focus {
+    outline: none;
 }
 
 [data-check = "false"] div{
