--- a/css/default_style.css
+++ b/css/default_style.css
@@ -112,7 +112,19 @@ body{
     border-left: 1px solid gray;
 }
 
-.input:focus, .textarea:focus {
+.listbox {
+    resize: none;
+    color:black;
+    background-color: #ffffff;
+    font-family: sans-serif;
+    font-size: 12px;
+    border-bottom: 1px solid white;
+    border-right: 1px solid white;
+    border-top: 1px solid gray;
+    border-left: 1px solid gray;
+}
+
+.input:focus, .textarea:focus, .listbox:focus {
     outline: none;
 }
 
