--- a/css/default_style.css
+++ b/css/default_style.css
@@ -3,6 +3,13 @@
     margin:0;
     box-sizing: border-box;
 }
+
+*, *::after, *::before {
+	-webkit-user-select: none;
+	-webkit-user-drag: none;
+	-webkit-app-region: no-drag;
+}
+
 body{
     background-color: #f0f0f0;
 }
@@ -172,6 +179,70 @@ body{
     padding: 2px 4px 2px 15px;
 }
 
+.top-window{
+    position: absolute;
+    background-color: #f0f0f0;
+    outline: 1px solid #0076d7;
+    box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.4);
+    display: flex;
+    flex-direction: column;
+    align-content: flex-start;
+    justify-content: flex-start;
+}
+.top-window .top-window-bar{
+    width: 100%;
+    height: 30px;
+    background-color: white;
+    font-family: sans-serif;
+    font-size: 12px;
+    display: grid;
+    grid-template-columns: 80% 20%;
+}
+.top-window .top-window-bar > div{
+    display: flex;
+    align-items: center;
+}
+.top-window .top-window-bar .top-window-title{
+    margin-left: 10px;
+}
+.top-window .top-window-bar .top-window-action-buttons{
+    height: 30px;
+    width: 100%;
+}
+.top-window .top-window-bar .top-window-bar-close-button{
+    position: relative;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+}
+
+.top-window .top-window-bar .top-window-bar-close-button .close-button-1,
+.top-window .top-window-bar .top-window-bar-close-button .close-button-2{
+    position: absolute;
+    width: 1px;
+    height: 14px;
+    background-color: black;
+}
+
+.top-window .top-window-bar .top-window-bar-close-button .close-button-1{
+    transform: rotate(45deg);
+    top: 25%
+}
+
+.top-window .top-window-bar .top-window-bar-close-button .close-button-2{
+    transform: rotate(-45deg);
+    top: 25%
+}
+
+.top-window .top-window-content-frame{
+    width: 100%;
+    height: 100%;
+}
+
+.top-window .top-window-bar .top-window-bar-close-button:hover{
+    background-color: red;
+}
 .menu-section > div > div:hover{
     background-color: #0076d7;
     color:white;
